kubernetes/apps/observability/grafana-operator/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/description: Dashboards & métriques
    gethomepage.dev/external: "true"
spec:
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
